# LocalRustWebServer

./: .gitignore  Cargo.toml  LICENSE  README.md
json_routes/: command_statuses.json  get_weather.json  help.html  home_route.json  private_test.json
migrations/: 01_table_start.sql
src/: add_user.rs  app.rs  auth.rs  certs.rs  config.rs  htmlv.rs  logging.rs  main.rs  my_api_config.rs  myapi.rs  procmon.rs  state.rs
src/auth/: login.rs  private.rs  users.rs
src/myapi/: api_call_system.rs  handlers.rs  shell_script_run.rs  updatefromgameapi.rs
statics/: 98.css  98.css.map  status.js
templates/: command_dashboard.html  login_template.html  private.html  template.html  template_config.json  template_plain.html  template_weather_frontend.html
