[package]
name = "Local_Rust_Web_Server"
version = "0.1.0"
edition = "2024"


[dependencies]
axum = "0.8.4"
axum-extra = "0.10.1"
axum-server = { version = "0.7.2", features = ["tls-rustls"] }
reqwest = {version="0.12.22", features = ["json"]}
mime = "0.3.17"
serde = {version="1.0.219", features = ["derive"]}
tokio = { version = "1.47.0", features = ["full"] }
tower-http = {version="0.6.6",  features = ["fs", "trace"]}
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tera = "1.19"
shellexpand = "3.1.1"
serde_with = "3.14.0"
serde_json = "1.0.141"
sysinfo = "0.36.1"
once_cell = "1.21.3"
serde_yaml = "0.9.34"
