[package]
name = "Local_Rust_Web_Server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
axum-extra = "0.10.1"
axum-server = { version = "0.7.2", features = ["tls-rustls"] }
axum-login = "0.18.0"

time="0.3.43"
reqwest = {version="0.12.23", features = ["json"]}
mime = "0.3.17"
serde = {version="1.0.219", features = ["derive"]}
tokio = { version = "1.47.1", features = ["full"] }
tower-http = {version="0.6.6",  features = ["fs", "trace"]}
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter","time"] }
tracing-appender = "0.2.3"
tera = "1.20.0"
shellexpand = "3.1.1"
serde_with = "3.14.0"
serde_json = "1.0.143"
serde_urlencoded = "0.7.1"
sysinfo = "0.37.0"
once_cell = "1.21.3"
serde_yaml = "0.9.34-deprecated"
html-escape = "0.2.13"

axum-messages = "0.8.0"
sqlx = { version = "0.8.6", features = ["sqlite", "time", "runtime-tokio"] }
tower-sessions = { version = "0.14.0", default-features = false, features = [
  "signed",
] }
tower-sessions-sqlx-store = { version = "0.15.0", features = ["sqlite"] }
thiserror = "2.0.16"

password-auth = "1.0.0"

process-wrap = { version = "9.0.0", features = ["tokio1"] }

